# DevOpsJeremy.github.io

./: .gitignore  404.html  CNAME  LICENSE  README.md  _config.yml  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  photo_home  pyproject.toml  requirements.txt  sitemap.xml  tags.json
.github/scripts/: generate_pwsh.ps1
.github/workflows/: ci.yml  docs.yml  example.yml  tests.yml
_drafts/: 2023-10-16-dotnet-for-powershell.md  2023-10-16-getting-assigned-parameters.md
_includes/: doc_header.html
_layouts/: doc_base.html  doc_category.html  documentation.html  posts.html
_posts/: 2023-10-16-getting-assigned-parameters.md
_sass/minima/: _layout.scss  custom-styles.scss  initialize.scss
about/: index.html
assets/css/: style.scss
assets/stylesheets/: custom.css
blog/: index.html
blog/tags/: index.html
docs/: about.md  index.md
docs/blog/: .authors.yml  index.md  tags.md
docs/drafts/: ci-comparison.md  rest-api.md
docs/other/: index.md
documentation/: index.html  index.md
documentation/ansible/: ansible.builtin.uri - Copy (5) - Copy.md  index.md
documentation/powershell/: ConvertTo-Module.md  Get-AssignedParameter.md  Get-FVFilters.md  Get-FVStocks.md  Get-FVTickerData.md  Get-FVURLs.md  Get-LoremIpsum.md  Get-YAMLHelp.md  New-Documentation.md  Set-FVFilters.md  index - Copy (2) - Copy.md  (+2 more)
draft/: CI showdown.md
hooks/: macros.py  socialmedia.py  utils.py
other/: index.html
overrides/: CNAME  photo  photo_home  tags.py
search/: search_index.json
setup/: android
(+110 files in other folders)
